spms-users-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: spms-users-srv
spec:
  type: NodePort
  selector:
    app: spms-users
  ports:
    - name: spms-users
      protocol: TCP
      port: 80
      targetPort: 80
